[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/art/healthbar/player_bar_background1.png" type="Texture" id=1]
[ext_resource path="res://assets/art/healthbar/player_mpbar_over.png" type="Texture" id=2]
[ext_resource path="res://assets/art/healthbar/player_expbar_over.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/NanumSquareRoundB.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/art/healthbar/player_healthbar_over.png" type="Texture" id=5]
[ext_resource path="res://assets/art/healthbar/player_bar_background.png" type="Texture" id=6]
[ext_resource path="res://assets/art/healthbar/background.png" type="Texture" id=7]
[ext_resource path="res://src/GUI/HUD.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 9 )

[node name="Control" type="Control" parent="."]
margin_top = 960.0
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_right = 1920.0
margin_bottom = 120.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoBack" type="Sprite" parent="Control/TextureRect"]
position = Vector2( 238.389, 61.0532 )
scale = Vector2( 0.610212, 0.548116 )
texture = ExtResource( 7 )

[node name="Name" type="Label" parent="Control/TextureRect/InfoBack"]
margin_left = -303.511
margin_top = -43.4122
margin_right = -105.511
margin_bottom = 52.5878
custom_fonts/font = SubResource( 1 )
text = "Level."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelValue" type="Label" parent="Control/TextureRect/InfoBack"]
margin_left = -85.0
margin_top = -43.0
margin_right = 113.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "82"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameValue" type="Label" parent="Control/TextureRect/InfoBack"]
margin_left = 44.197
margin_top = -24.5166
margin_right = 296.197
margin_bottom = 34.4834
custom_fonts/font = SubResource( 2 )
text = "스폐셜떙스루"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpProgressBar" type="TextureProgress" parent="Control/TextureRect"]
margin_left = 490.0
margin_top = 40.0
margin_right = 874.0
margin_bottom = 120.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MpProgressBar" type="TextureProgress" parent="Control/TextureRect"]
margin_left = 880.0
margin_top = 40.0
margin_right = 1264.0
margin_bottom = 120.0
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpProgressBar" type="TextureProgress" parent="Control/TextureRect"]
margin_left = 1270.0
margin_top = 40.0
margin_right = 1654.0
margin_bottom = 120.0
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Control/TextureRect"]

[node name="HpContainer" type="HBoxContainer" parent="Control/TextureRect"]
margin_left = 490.0
margin_right = 872.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Control/TextureRect/HpContainer"]
margin_top = 7.0
margin_right = 42.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
text = "Hp"

[node name="Value" type="Label" parent="Control/TextureRect/HpContainer"]
margin_left = 46.0
margin_top = 7.0
margin_right = 46.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )

[node name="MpContainer" type="HBoxContainer" parent="Control/TextureRect"]
margin_left = 880.0
margin_right = 1262.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Control/TextureRect/MpContainer"]
margin_top = 9.0
margin_right = 47.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
text = "Mp"

[node name="Value" type="Label" parent="Control/TextureRect/MpContainer"]
margin_left = 51.0
margin_top = 9.0
margin_right = 51.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )

[node name="ExpContainer" type="HBoxContainer" parent="Control/TextureRect"]
margin_left = 1270.0
margin_right = 1652.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Control/TextureRect/ExpContainer"]
margin_top = 7.0
margin_right = 55.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
text = "Exp"

[node name="Value" type="Label" parent="Control/TextureRect/ExpContainer"]
margin_left = 59.0
margin_top = 7.0
margin_right = 59.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
